made it record time lobby created in supabase database

--- a/WifiSystems/GlobalWifiwebsocketIO/NodeServer/LobbyList.html
+++ b/WifiSystems/GlobalWifiwebsocketIO/NodeServer/LobbyList.html
@@ -28,6 +28,7 @@
             <th>Name</th>
             <th>Password</th>
             <th>ID</th>
+            <th>Created At:</th>
             <th>link</th>
         </tr>
        
