updated control website to look and feel better

--- a/RobotBuilds/Esp32-Stream-Robot2/NodeServer/LobbyList.html
+++ b/RobotBuilds/Esp32-Stream-Robot2/NodeServer/LobbyList.html
@@ -60,7 +60,7 @@
                     });
                     var td = document.createElement('td');
                     let robotID = robotList[i]['ID']
-                    td.innerHTML = `<a href="./client?id=${robotID}">Join</a>`;
+                    td.innerHTML = `<a href="./controls.html?id=${robotID}">Join</a>`;
                     tr.appendChild( td);
                 }
                 
