--- a/RobotBuilds/Esp32-Stream-Robot2/NodeServer/Pages/controls.html
+++ b/RobotBuilds/Esp32-Stream-Robot2/NodeServer/Pages/controls.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" rel="noopener" target="_blank" href="style.css">
   <link rel="stylesheet" type="text/css" rel="noopener" target="_blank" href="arrowKeys.css">
   <script src="https://bobboteck.github.io/joy/joy.js"></script>
+  <link href="fontawesome-free-5.15.4-web/css/all.min.css" rel="stylesheet">
 
 </head>
 
@@ -27,7 +28,6 @@
       <div class="down arr"><i class="fa fa-arrow-down"></i></div>
       <div class="right arr"><i class="fa fa-arrow-right"></i></div>
     </div>
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   </div>
   <!-- this is the visual code to work around css -->
   <script type="text/javascript">
