captive portal detects mobile and show differnt webpage

--- a/RobotBuilds/Esp32_Stream_Robot1.5/Pages/controls.html
+++ b/RobotBuilds/Esp32_Stream_Robot1.5/Pages/controls.html
@@ -2,12 +2,13 @@
 <html>
 
 <head>
-  <title>Client</title>
+  <title>BallyBots Control</title>
+  <link rel="icon" type="image/x-icon" href="LogoImg.svg">
   <link rel="stylesheet" type="text/css" rel="noopener" target="_blank" href="style.css">
   <link rel="stylesheet" type="text/css" rel="noopener" target="_blank" href="arrowKeys.css">
   <script src="joy.js"></script>
   <link href="font/css/all.min.css" rel="stylesheet">
-
+ 
 </head>
 
 <body>
@@ -27,7 +28,7 @@
   <div class="centerPanel" style="grid-row: 1/2 ;">
   <div class="controlPanel" style="grid-column: 1 / 2;">
     <div class="videoPanel">
-      <img id="stream"  src="PlaceHolder.png">
+      <img id="stream"  src="PlaceHolder.jpg">
     </div>
     <div class="buttons">
       <div class="toggle-buttons">
