fixed arrowkey css, server clears lobby on start, and added lobbylist button on frontpage

--- a/RobotBuilds/Esp32_Stream_Robot3/NodeServer/Pages/index.html
+++ b/RobotBuilds/Esp32_Stream_Robot3/NodeServer/Pages/index.html
@@ -23,6 +23,7 @@
     <li style="grid-row: 1 / 2 ;"><a href="">Home</a></li>
     <li style="grid-row: 1 / 2 ;"><a href="#about">About</a></li>
     <li style="grid-row: 1 / 2 ;"><a href="#socials">Contact</a></li>
+    <li style="grid-row: 1 / 2 ;"><a href="/LobbyList">RobotLobby</a></li>
     <li style="grid-row: 1 / 2 ;"><a href="#socials">More</a></li>
     <!-- <li style="grid-row: 1 / 2 ; margin-left: auto;height: 50%;"><a href="#about" style="background: #555555;border: 1px solid white; font-size: 2vmin;">Connect To Server</a></li>
     <li style="grid-row: 1 / 2 ;grid-column: 5 / 6 ;margin-left: auto;"><a href="#about" style="font-size: xx-large;">BallyBot Name</a>/li> -->
@@ -78,7 +79,7 @@
     <div style="text-align: center;">
       <p>
         This website last updated: <br>
-        2/28/2024
+        4/9/2024
       </p>
     </div>
 
